# HuffmanEncrypt

./: CMakeLists.txt  main.cpp
HuffmanEncrypt/: CMakeLists.txt  LICENSE  main.cpp
HuffmanEncrypt/OutputCompressed/: compressed_data.huff
HuffmanEncrypt/Sampletxtfile/: 100KB.txt  10kB.txt  200KB.txt  huffmanCommon.h  huffmanCompress.cpp  huffmanCompress.h  huffmanCompressPar.cpp  huffmanCompressPar.h
